--- a/exercise5-react/src/App.css
+++ b/exercise5-react/src/App.css
@@ -1,44 +1,69 @@
-/* body{
-  margin: 0;
-  background-color: grey;
-} */
+/* --- App --- */
 
+body{
+  background-color: #696969;
+}
 
-/* .App {
+.App{
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menuCard{
+  background-color: #faebd7;
+  width: 700px;
+  height: 270px;
+  border-radius: 10px;
+  text-align: left;
+  padding: 10px;
+  border: 3px solid black;
+  align-self:center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/*---Header  Component---*/
+.Header{
+  color: #ffda00;
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+/*---Menu  Component---*/
+.menuImg{
+  float: right;
+  width: 220px;
+  height: 180px;
+}
+
+.menuName{
+  font-weight: bold;
+}
+
+.menuDetail{
+  font-size: 15px;
+}
+
+/*---Button Component---*/
+.Button{
+  height: 60px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.operate-button{
+  height: 30px;
+  margin: 10px;
 }
+.vote-value{
+  color: purple;
+  font-size: 20px;
+  font-weight: 900;
+  font-family: sans-serif;
+  background-color:greenyellow;
+  padding: 8px;
+  border-radius: 5px;
+  border: 3px solid black;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+}
