--- a/exercise5-react/src/App.css
+++ b/exercise5-react/src/App.css
@@ -1,5 +1,4 @@
 /* --- App --- */
-
 body{
   background-color: #696969;
 }
@@ -7,33 +6,35 @@ body{
 .App{
   display: flex;
   flex-direction: column;
-  margin-top: 40px;
   text-align: center;
 }
 
+h1{
+  color: #ffda00;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
 .menuCard{
+  text-align: left;
   background-color: #faebd7;
   width: 700px;
-  height: 270px;
+  height: 240px;
+  padding: 20px;
   border-radius: 10px;
-  text-align: left;
-  padding: 10px;
   border: 3px solid black;
   align-self:center;
 }
 
 
-/*---Header  Component---*/
-.Header{
-  color: #ffda00;
-  font-weight: bold;
+/*---Menu  Component---*/
+.Menu{
+  display: flex;
 }
 
-
-/*---Menu  Component---*/
 .menuImg{
   float: right;
-  width: 220px;
+  width: 200px;
   height: 180px;
 }
 
@@ -45,25 +46,24 @@ body{
   font-size: 15px;
 }
 
+
 /*---Button Component---*/
 .Button{
-  height: 60px;
+  height: 50px;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 .operate-button{
   height: 30px;
   margin: 10px;
 }
 .vote-value{
-  color: purple;
+  color: #8f20ee;
   font-size: 20px;
   font-weight: 900;
   font-family: sans-serif;
-  background-color:greenyellow;
+  background-color:#4af63b;
   padding: 8px;
   border-radius: 5px;
   border: 3px solid black;
-
 }
